fix(table): fix scrollbar when fixing header

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -282,6 +282,10 @@
       }
     }
 
+    .@{prefix}-table__header {
+      .scrollbar()
+    }
+
     .@{prefix}-table__body {
       overflow-y: auto;
       width: fit-content;
@@ -491,7 +495,7 @@
 .t-table-filter-pop {
   .t-table-filter-pop-content {
     margin: -8px;
-    
+
     .@{prefix}-table-filter-pop-content__inner {
       padding: 16px;
 
